css/styles.css
/*
 *
 * CSS written based on SMACSS architecture.
 * To learn more, visit: http://smacss.com/
 * 
 * For simplicity, no reset or normalize is added. 
 * To learn more, visit: https://css-tricks.com/reboot-resets-reasoning/
 *
*/

/* -----Color Palette-----
:root {
    --clr-steelBlue: rgba(70, 130, 180)

} */

/* ---- Base Rules ---- */
html {
    /* using this single line of css('scroll-behavior') instead of multiple lines of js logic
    to accomodate scrolling...  */
    scroll-behavior: smooth;
}

a {
    text-decoration: none;
}

body {
    background: rgb(136,203,171);
    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, #000d3c 100%);
    margin: 0;
    font-family: 'Merriweather', serif;
    color: #fff;
}

button {
    color: #000d3c;
    margin: 0;
    padding: 2em, 0;
}

button.active {
    color: rgb(204, 204, 17);
    ;
}


/* Typeography General*/
h1 {
    font-family: 'Fira Sans', sans-serif;
    font-size: 3em;
    margin: 2em 1rem;
}

@media only screen and (min-width: 35em){
    h1 {
        font-size: 7em;
        margin: 2em 4rem 1em;
    }
}

h2 {
    border-bottom: 1px solid #cc1;
    font-family: 'Oxygen', Sans-Serif;
    font-size: 3em;
    color: #fff;
}

h3 {
    text-decoration: none;
}

p {
    line-height: 1.6em;
    color: #eee;
}

/* ---- Layout Rules ---- */
main {
    margin: 10vh 1em 10vh;
}

.main-hero {
    min-height: 40vh;
    padding-top: 3em;
}

section {
    position: relative;
    min-height: 80vh;
}


/* ---- Module Rules ---- */

/* Navigation Styles*/
/* .navbar__menu.active {
   display: none;
} */

.navbar__menu ul {
    display: flex;
    padding-left: 0;
    margin: 0;
}

.navbar__menu li {
    display: inline-block;
    margin-left: 2em;
}

.navbar__menu .menu__link button {
    display: block;
    min-height: 100%;
    margin-bottom: none;
    border: none;
    background-color: #fff;
}

.navbar__menu .menu__link button:hover {
    color: rgb(204 204 17);
    transition: ease 0.5s all;
}

/* Header Styles */
.page__header {
    background: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 5;
    transition: ease 0.5s; 
}

/* Footer Styles */
.page__footer {
    background: #000;
    padding: 3em;
    color: #fff;
}

.page__footer p{
    color: #fff;
}


/* ---- Theme Rules ---- */
/* Landing Container Styles */
.landing__container {
    padding: 1em;
    text-align: left;
}

.page__header.invisible-navbar {
    transform: translateY(-75px);
    transition: ease 0.4s;
}

@media only screen and (min-width: 35em){
    .landing__container {
        max-width: 50em;
        padding: 4em;
    }
}

section:nth-of-type(even) .landing__container {
    margin-right: 0;
    margin-left: auto;
    text-align: right; 
}

/* Background Circles */
/* Note that background circles are created with psuedo elements before and after */
/* Circles appear to be random do to use of :nth-of-type psuedo class */
section:nth-of-type(odd) .landing__container::before {
    content: '';
    background: rgba(67, 228, 18, 0.187);
    position: absolute;
    z-index: -5;
    width: 20vh;
    height: 20vh;
    border-radius: 50%;
    opacity: 0;
    transition: ease 0.5s all;
}

section:nth-of-type(even) .landing__container::before {
    content: '';
    background: rgb(13, 215, 230);
    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgb(13, 215, 230, 0.2) 100%);
    position: absolute;
    top: 3em;
    right: 3em;
    z-index: -5;
    width: 10vh;
    height: 10vh;
    border-radius: 50%;
    opacity: 0;
    transition: ease 0.5s all;
}

section:nth-of-type(3n) .landing__container::after {
    content: '';
    background: rgb(102, 216, 8);
    background: linear-gradient(0deg, rgba(255, 104, 93, 0.2) 0%, rgb(13, 215, 230, 0.2) 100%);
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: -5;
    width: 10vh;
    height: 10vh;
    border-radius: 50%;
    opacity: 0;
    transition: ease 0.5s all;
}

section:nth-of-type(3n + 1) .landing__container::after {
    content: '';
    background: rgb(219, 163, 9);
    background: linear-gradient(0deg, rgba(7, 245, 174, 0.2) 0%, rgba(26, 113, 226, 0.4) 100%);
    position: absolute;
    right: 20vw;
    bottom: -5em;
    z-index: -5;
    width: 15vh;
    height: 15vh;
    border-radius: 50%;
    opacity: 0;
    transition: ease 0.5s all;
}


/* ---- Theme State Rules ---- */
/* Section Active Styles */
section.active {
    background: rgb(0, 0, 0);
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(204, 204, 17, 0.7) 100%);
}

section.not-so-active .landing__container::before {
    opacity: 1;
    animation: rotate 4s linear 0s infinite forwards;
}

section.active .landing__container::after {
    opacity: 1;
    animation: rotate 5s linear 0s infinite forwards reverse;
}


/* Section Active Styles Keyframe Animations */
@keyframes rotate {
	from {
		transform: rotate(0deg)
		           translate(-1em)
		           rotate(0deg);
	}
	to {
		transform: rotate(360deg)
		           translate(-1em) 
		           rotate(-360deg);
	}
}

/*---- Media Queries ---- */
@media (max-width: 560px) {
    .navbar__menu ul {
    }

    .navbar__menu li {
        margin: 1em;
        margin-bottom: 0;
    } 
  
   
    h3 {
        font-size: 1em;
    }
}  

